--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-        exclude: .gitattributes
+        exclude: .gitattributes, ^README\.md$
     -   id: check-yaml
 -   repo: https://github.com/psf/black
     rev: 23.1.0
