fix: initial commit bugs (#1)
* fix: unit tests workflow

* build: update pyproject.toml

* feat: add conftest

* fix: pre-commit

* fix: missing import headers

* doc: add header file docstrings to main.py

* fix: pre-commit exclude trailing-whitespace excludes

* fix: README.md end of lines

* fix: wrong variable naming in __init__.py

* test: main

* fix: main test

---------

Co-authored-by: jriverosesma <jriverosema@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,9 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
+        exclude: ^README\.md$
     -   id: end-of-file-fixer
-        exclude: .gitattributes, ^README\.md$
+        exclude: .gitattributes
     -   id: check-yaml
 -   repo: https://github.com/psf/black
     rev: 23.1.0
