--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,19 @@
 [tool.poetry]
 name = "my-package"
-version = "v0.1.0"
+version = "0.1.0"
 description = "Simple and effective Python project template"
-authors = ["Juan Rivero Sesma <jriverosesma@gmail.com>"]
 readme = "README.md"
-license = "MIT"
+requires-python = ">=3.10"
+license = { file = "LICENSE" }
+keywords = ["dino", "chrome", "bot", "game", "automatic"]
+authors = [
+  { name = "Juan Rivero Sesma", email = "jriverosesma@gmail.com" }
+]
 include = ["NOTICES", "LICENSE", "CHANGELOG.md"]
 classifiers = [
-    "Programming Language :: Python :: 3",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3",
 ]
 
 [project.urls]
@@ -17,18 +23,16 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 
-# Development
-black = { version = "^23.9.1", optional = true }
-bumpver = { version = "^2023.1126", optional = true }
-isort = { version = "^5.12.0", optional = true }
-flake8 = { version = "^6.1.0", optional = true }
-pre-commit = { version = "^3.4.0", optional = true }
-pip-licenses = { version = "^4.3.2", optional = true }
 
-# Test
-pytest = { version = "^7.4.2", optional = true }
-pytest-mock = { version = "^3.11.1", optional = true }
-pytest-sugar = { version = "^0.9.7", optional = true }
+[project.optional-dependencies]
+dev = [
+  "bumpver>=2024.1130,<2025.0",
+  "pre-commit>=4.2.0,<5.0.0",
+  "pip-licenses>=5.0.0,<6.0.0",
+  "pytest>=8.3,<9.0",
+  "pytest-mock>=3.14,<4.0",
+  "pytest-sugar>=1.0,<2.0"
+]
 
 [tool.poetry.extras]
 dev = ["black", "bumpver", "isort", "flake8", "pre-commit", "pip-licenses"]
@@ -70,7 +74,7 @@ commit_message  = "Bump version: {old_version} → {new_version}"
 ]
 
 [tool.pytest.ini_options]
-minversion = "7.4"
+minversion = "8.3"
 markers = [
     "slow: Slow tests",
     "failing: Tests which need to be fixed",
