fix: local-container env sync

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
     "name": "My Package Development Environment",
     "dockerFile": "../Dockerfile",
-    "workspaceFolder": "/app",
+    "workspaceFolder": "/app/${localWorkspaceFolderBasename}",
+    "workspaceMount": "source=${localWorkspaceFolder}, target=/app/${localWorkspaceFolderBasename}, type=bind",
     "customizations": {
         "vscode": {
             "settings": {
